# LocalGitLabGateway

./: .gitignore  README.md  pyproject.toml
config/private_bridge/: config.example.yaml
config/public_gateway/: config.example.yaml
deploy/nginx/: local-gitlab-gateway.conf.example
deploy/systemd/: local-gitlab-gateway-private.service.example  local-gitlab-gateway-public.service.example
deploy/wireguard/: private-gitlab-wg0.conf.example  public-gateway-wg0.conf.example
docs/ja-JP/: README.md  目次.md
docs/ja-JP/01_仕様/: 00_HLDocS正規化方針.md  01_要件定義.md  02_通信方式設計.md
docs/ja-JP/03_運用手順/: 01_システム構成・概要.md  02_Public_Gateway_Host_構築.md  03_Private_GitLab_Host_構築.md  04_WireGuard_構築.md  05_Public_Gateway_構築.md  07_nginx_設定.md  08_systemd_設定.md  09_GitLab_ReverseProxy.md  11_API確認.md  12_トラブルシュート.md  13_HTTPS_設定.md  運用手順目次.md
docs/ja-JP/テスト仕様/: 01_初期APIテスト仕様.md
docs/ja-JP/仕様/: 01_要件定義.md  02_通信方式設計.md  03_フォルダ構成設計.md  04_Public Gateway Service API仕様.md  04_Public_Gateway_Service_API仕様.md  05_Private Bridge Agent API仕様.md  05_Private_Bridge_Agent_API仕様.md  06_ChatGPT Operation Profile仕様.md  06_ChatGPT_Operation_Profile仕様.md
docs/ja-JP/運用/: 01_概要.md  01_環境構築手順.md  02_HLDocS正規化方針.md  03_APIキー作成手順.md  04_WireGuard_構築.md  05_Public_Gateway_構築.md  06_Private_Bridge_構築.md  07_nginx_設定.md  08_systemd_設定.md  09_GitLab_ReverseProxy.md  10_動作確認.md  11_API確認.md  12_トラブルシュート.md  運用目次.md
profiles/chatgpt/: operation_profile.template.md
src/local_gitlab_gateway/common/: config.py  request_id.py
src/local_gitlab_gateway/private_bridge/: gitlab_branches.py  gitlab_client.py  (+5 more)
(+12 files in other folders)
