[project]
name = "local-gitlab-gateway"
version = "0.1.0"
description = "Gateway tools for safely operating an internal GitLab instance through a public gateway."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.6.0",
]

[project.scripts]
local-gitlab-gateway-public = "local_gitlab_gateway.public_gateway.main:run"
local-gitlab-gateway-private = "local_gitlab_gateway.private_bridge.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_gitlab_gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=local_gitlab_gateway --cov-report=term-missing --cov-fail-under=100"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
